<resources>
    <string name="app_name">TinderClone</string>
    <string name="tinder">tinder</string>
    <string name="privacy_text">By clicking Log In, you agree with our Terms.</string>
    <string name="Learn_text">Learn how we process your data in our Privacy</string>
    <string name="policy_text">Policy and Cookies Policy.</string>
    <string name="log_in_with_google">log in with google</string>
    <string name="log_in_with_phone_number">log in with phone number</string>
    <string name="log_in_with_facebook">log in with facebook</string>
    <string name="trouble_loggin_in">Trouble Logging in?</string>
    <string name="likes">Likes</string>
    <string name="top_picks">Top Picks</string>

    <string name="varsha_21">Varsha,21</string>
    <string name="text_photo">Photo Tip:A smile should get their attention</string>
    <string name="text_setting">SETTINGS</string>
    <string name="text_add">ADD MEDIA</string>
    <string name="text_edit">EDIT INFO</string>
    <string name="text_my">My TINDER PLUS</string>
    <string name="text_increase"> Increase Your Chances</string>
    <string name="text_get">Get unlimited Likes with Tinder Plus</string>
    <string name="text_stand">Stand Out with Super Likes</string>
    <string name="text_namee">Get Matches Faster</string>
    <string name="text_Boost">Boost your profile once a month</string>
    <string name="text_yoy">you are more likely to get a match</string>

    <string name="_5_likes">5 Likes</string>
    <string name="upgrade_to_gold_to_see">Upgrade to Gold to see</string>
    <string name="people_who_have_already">people who have already</string>
    <string name="liked_you">liked you.</string>
    <string name="see_who_likes_you">see who likes you</string>
    <string name="messages">Messages</string>
    <string name="search_4_matches">Search 4 Matches</string>
    <string name="new_matches">New Matches</string>
    <string name="menere">Menere</string>
    <string name="glen">Glen</string>
    <string name="jeroen">Jeroen</string>
    <string name="caitlin">Caitlin</string>
    <string name="lauren">Lauren</string>
    <string name="jem">Jem</string>

    <string name="text_swipe">Unlimited Right Swipes</string>
    <string name="text_likees">Swipe as much as you like</string>
    <string name="text_unlimited">Unlimited Likes</string>
    <string name="text_give">Give me the ability to like as many people as i want</string>
    <string name="text_skip">Skip TheLine</string>
    <string name="text_profile">Be a top profile in your area for 30 minutes to get more matches</string>
    <string name="text_more">Tinder Boost</string>
    <string name="text_free">Give me 1 free Boost every month</string>
    <string name="text_see">Control Who You See</string>
    <string name="text_simple">it is simple now to choose the type of people you want to see on Tinder</string>
    <string name="text_Balanced">Balanced Recommendations</string>
    <string name="text_the">See the most relevant people to you (default setting)</string>
    <string name="text_active">Recently Active</string>
    <string name="text_most">See the most recently active people first</string>
    <string name="text_plus">Get Tinder Plus</string>
    <string name="text_who">Control Who Sees You</string>
    <string name="text_certain">Only be shown to certain types of people on Tinder</string>
    <string name="text_standard">Only be shown to certain types of people for individual recommendations</string>
    <string name="text_Liked">Only People Liked</string>
    <string name="text_right">Only people right swiped will see me</string>
    <string name="text_information">Control Your Profile</string>
    <string name="text_profiles">Make parts of your profile information invisible to other people</string>
    <string name="text_indivisual">Make My Distance Invisible</string>
    <string name="text_pasport">Passport To Any Location</string>
    <string name="text_Go">Match with people all around the world Pairs.Los Angleles.Sydney.Go</string>

    <string name="my_number_is">My number is...</string>
    <string name="continue_1">CONTINUE</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="text_info">When you tap the continue, Tinder will send a text with verification code.Messege and rates may apply. The verified mobile number can be used to login</string>
    <string name="text_info_highlighted">Learn what happens when your number changes</string>
    <string name="enter_username_or_id">Enter Username or id</string>
    <string name="enter_user_name">Enter Your User Name</string>
    <string name="in_91">IN +91</string>
    <string name="signin_to_contiue_gmail">Sign in to continue to Gmail</string>
    <string name="btnContnuegoogle">CONTINUE</string>
    <string name="enter_user_name_Google">Enter User Name</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_password">Enter Password</string>
    <string name="what_s_your_email">whats your email?</string>
    <string name="dont_lose_access_to_your_account_verify_your_email">Dont lose access to your account, verify your email</string>
    <string name="conitnue_1">CONITNUE</string>
    <string name="be_yourself">Be Yourself.</string>
    <string name="show_my_orientation_on_my_profile">Show my Orientation on my profile</string>
    <string name="asexual">Asexual</string>
    <string name="more">MORE</string>
    <string name="lesbian">Lesbian</string>
    <string name="gay">Gay</string>
    <string name="straight">Straight</string>
    <string name="my_sexual_orientation_is">My sexual orientation is</string>
    <string name="make_sure_your">make sure your photoes , age and everything is correct</string>
    <string name="be_true">Be True</string>
    <string name="never_make_trouble">Never make trouble</string>
    <string name="play_it_cool">Play it Cool</string>
    <string name="make_sure_your_photoes_age_and_everything_is_correct">make sure your photoes , age and everything is correct</string>
    <string name="please_follow_these_house_rules">Please follow these House Rules.</string>
    <string name="welcome_to_tinder">Welcome To Tinder</string>
    <string name="stay_safe">Stay Safe</string>
    <string name="dont_be_fake">Dont be fake</string>
    <string name="info_1">Let everyone know what you\'re passionate about by addign it to your profile.</string>
    <string name="board_games">Board Games</string>
    <string name="ludo">Ludo</string>
    <string name="art">Art</string>
    <string name="athlete">Athlete</string>
    <string name="movies">Movies</string>
    <string name="road_trips">Road Trips</string>
    <string name="karaoke">Karaoke</string>
    <string name="grab_a_drink">Grab a Drink</string>
    <string name="dog_lover">Dog Lover</string>
    <string name="hiking">Hiking</string>
    <string name="k_pop">K-Pop</string>
    <string name="yoga">Yoga</string>
    <string name="house_parties">House parties</string>
    <string name="sneakers">Sneakers</string>
    <string name="politics">Politics</string>
    <string name="climbing">Climbing</string>
    <string name="working_out">Working Out</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="cricket">Cricket</string>


    <string name="reading_books1">Reading Books</string>
    <string name="swimming">Swimming</string>
    <string name="chess">Chess</string>
    <string name="passions">Passions</string>
    <string name="add_photoes">Add Photoes</string>
    <string name="add_atleast_two_photoes_to_continue">Add Atleast Two Photoes to continue</string>
    <string name="i_am_a">I am a</string>
    <string name="women">WOMEN</string>
    <string name="men">MEN</string>

    <string name="my_school_is">My School is</string>
    <string name="this_is_how_intro">This is how it will appear on Tinder and you will not be able to change it</string>
    <string name="school_name">School Name</string>
    <string name="or">Or</string>
    <string name="this_is_how_it_w">This is how it will appear on tinder and you will not be able to edit it</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="enter_user_name_Google">Email or user name</string>
    <string name="google">google</string>
    <string name="get_tinder_plus">Get Tinder Plus</string>
    <string name="unlimited_rewinds">Unlimited Rewinds</string>
    <string name="go_back_and_swipe_again">Go back and swipe again</string>
    <string name="_12">12</string>
    <string name="months">months</string>
    <string name="boost_me">Boost me</string>
    <string name="or">or</string>
    <string name="out_of_boosts">Out of Boosts!</string>
    <string name="be_a_top_profile_in_your_area_for_30_minutes_to_get_more_matches">Be a top profile in your area for 30 minutes to get more matches.</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="need_help">Need help?</string>

</resources>