<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/tinder_theme"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTinder"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_100"
        android:drawableStart="@drawable/ic_tinder"
        android:drawablePadding="@dimen/dp_5"
        android:textSize="@dimen/sp_55"
        android:fontFamily="@font/varela_round"
        android:text="@string/tinder"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_150"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:text="@string/privacy_text"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:text="@string/Learn_text"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/policy_text"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/rect_round"
        android:id="@+id/btnGoogle"
        android:layout_margin="@dimen/dp_20"
        android:drawableStart="@drawable/ic_flat_color_icons_google"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/log_in_with_google"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/rect_round"
        android:id="@+id/btnPhoneNumber"
         android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:drawableStart="@drawable/ic_speech_bubble"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/log_in_with_phone_number"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/rect_round"
        android:id="@+id/btnFacebook"
        android:layout_margin="@dimen/dp_20"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/log_in_with_facebook"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
       android:layout_gravity="center"
        android:textSize="@dimen/sp_18"
        android:fontFamily="@font/varela_round"
        android:textStyle="bold"
        android:text="@string/trouble_loggin_in"
        android:layout_height="wrap_content"/>

</LinearLayout>