<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassionPage">
    <TextView
        android:id="@+id/textSchoolText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="50dp"
        android:text="@string/passions"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/simpleText"
        android:layout_below="@+id/textSchoolText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_1"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_below="@id/simpleText"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/art"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/athlete"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:text="@string/movies"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>

               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/board_games"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="20sp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/ludo"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/road_trips"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:text="@string/karaoke"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>

               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/grab_a_drink"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/dog_lover"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/hiking"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/k_pop"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:text="@string/yoga"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>

               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/house_parties"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/sneakers"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/politics"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/climbing"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/working_out"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/vegetarian"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/cricket"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/athlete"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/reading_books1"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/ludo"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>


               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/swimming"
                       android:background="@drawable/passions_circular_bg"
                       android:gravity="center"
                       android:layout_margin="10dp"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/chess"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:background="@drawable/passions_circular_bg"
                       android:layout_margin="10dp"
                       android:text="@string/movies"
                       android:gravity="center"
                       android:textSize="@dimen/sp_20"/>

               </LinearLayout>

           </LinearLayout>
       </ScrollView>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnContinuepassion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rect_bg"
        android:text="@string/conitnue_1"
        android:textSize="15sp" />

</RelativeLayout>