<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".My_firstname_intro_page">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_20"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="50dp"
        android:text="My First Name is"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginEnd="40dp"
        android:hint="@string/enter_your_name"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_how_it_w"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/buttoncontiname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rect_bg"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/conitnue_1"
        android:textSize="15sp" />
</LinearLayout>